Call HolidayRegion::holidays( start, end ) once, instead of calling HolidayRegion::holdays( date ) 42 times.

Saves almost 2 seconds when using the date navigator.

BUG: 243472



svn path=/branches/KDE/4.5/kdepim/; revision=1157649